--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "morgan": "^1.9.1"
   },
   "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.1.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
     "eslint-plugin-import": "^2.16.0",
@@ -28,7 +30,8 @@
     "node": ">=10.x"
   },
   "scripts": {
-    "start": "cross-env PORT=5000 nodemon index.js"
+    "start": "cross-env PORT=5000 nodemon index.js",
+    "test": "mocha './{,!(node_modules)/**/}*.test.js'"
   },
   "eslintConfig": {
     "env": {
