--- a/package.json
+++ b/package.json
@@ -19,11 +19,14 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
-    "mocha": "^6.1.4",
     "eslint": "^5.16.0",
     "eslint-config-airbnb-base": "^13.1.0",
+    "eslint-config-prettier": "^4.3.0",
     "eslint-plugin-import": "^2.16.0",
-    "nodemon": "^1.18.9"
+    "eslint-plugin-prettier": "^3.1.0",
+    "mocha": "^6.1.4",
+    "nodemon": "^1.18.9",
+    "prettier": "^1.17.1"
   },
   "main": "index.js",
   "engines": {
@@ -35,12 +38,21 @@
   },
   "eslintConfig": {
     "env": {
-      "browser": true
+      "browser": true,
+      "mocha": true
     },
     "extends": [
-      "airbnb-base"
+      "airbnb-base",
+      "prettier"
+    ],
+    "plugins": [
+      "prettier"
     ],
     "rules": {
+      "no-console": 0,
+      "prettier/prettier": [
+        "error"
+      ],
       "no-unused-vars": [
         "error",
         {
